# crockeo.net

./: .gitignore  Cargo.toml  Dockerfile  README.md  go.mod  main.go
server/: Cargo.toml
server/src/: main.rs
src/: main.rs
static/: header.html  index.css  index.html
