[package]
name = "crockeo-net"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.14.13"
lazy_static = "1.4.0"
qrcode-generator = "4.1.2"
tokio = { version = "1.11.0", features = ["full"] }
warp = "0.3.1"
